--- a/test/arc-workspace-state-mixin-test.html
+++ b/test/arc-workspace-state-mixin-test.html
@@ -321,6 +321,30 @@
       });
     });
 
+    suite('_restoreAuthConfiguration()', () => {
+      let element;
+      setup(() => {
+        element = fixture('Basic');
+      });
+
+      test('Does nothing when values are not set', () => {
+        element._restoreAuthConfiguration();
+        assert.isUndefined(element._workspaceOauth2RedirectUri);
+      });
+
+      test('Set webSessionUrl property', () => {
+        const config = {oauth2RedirectUri: 'https://'};
+        element._restoreAuthConfiguration(config);
+        assert.equal(element._workspaceOauth2RedirectUri, 'https://');
+      });
+
+      test('Ignores unknown type for webSessionUrl', () => {
+        const config = {oauth2RedirectUri: true};
+        element._restoreAuthConfiguration(config);
+        assert.isUndefined(element._workspaceOauth2RedirectUri);
+      });
+    });
+
     suite('_afterRestore()', () => {
       let element;
       setup(() => {
@@ -434,6 +458,16 @@
         });
         assert.isTrue(spy.called);
         assert.deepEqual(spy.args[0][0], webSession);
+      });
+
+      test('Calls _restoreAuthConfiguration()', () => {
+        const auth = {oauth2RedirectUri: 'https://'};
+        const spy = sinon.spy(element, '_restoreAuthConfiguration');
+        element._restore({
+          auth
+        });
+        assert.isTrue(spy.called);
+        assert.deepEqual(spy.args[0][0], auth);
       });
     });
 
@@ -636,6 +670,30 @@
       });
     });
 
+    suite('serializeAuthorization()', () => {
+      let element;
+      setup(() => {
+        element = fixture('Basic');
+      });
+
+      test('Returns object', () => {
+        const result = element.serializeAuthorization();
+        assert.typeOf(result, 'object');
+      });
+
+      test('Sets oauth2RedirectUri when a string', () => {
+        element._workspaceOauth2RedirectUri = 'https://';
+        const result = element.serializeAuthorization();
+        assert.equal(result.oauth2RedirectUri, 'https://');
+      });
+
+      test('Skips oauth2RedirectUri when not a string', () => {
+        element._workspaceOauth2RedirectUri = true;
+        const result = element.serializeAuthorization();
+        assert.isUndefined(result.oauth2RedirectUri);
+      });
+    });
+
     suite('serializeWorkspace()', () => {
       let element;
       setup(() => {
@@ -706,6 +764,12 @@
 
       test('Calls serializeWebSession()', () => {
         const spy = sinon.spy(element, 'serializeWebSession');
+        element.serializeWorkspace();
+        assert.isTrue(spy.called);
+      });
+
+      test('Calls serializeAuthorization()', () => {
+        const spy = sinon.spy(element, 'serializeAuthorization');
         element.serializeWorkspace();
         assert.isTrue(spy.called);
       });
