--- a/arc-request-workspace.html
+++ b/arc-request-workspace.html
@@ -859,15 +859,17 @@
      * @return {CustomEvent}
      */
     _dispatchExportData(destination, requests) {
-      const e = new CustomEvent('export-data', {
+      const e = new CustomEvent('arc-data-export', {
         cancelable: true,
         composed: true,
         bubbles: true,
         detail: {
-          type: 'arc-export',
-          destination,
-          file: 'arc-saved-export.json',
-          kind: 'ARC#SavedExport',
+          options: {
+            file: 'arc-request.arc',
+            provider: destination,
+            kind: 'ARC#SavedExport'
+          },
+          providerOptions: {},
           data: {
             requests
           }
