--- a/demo/index.html
+++ b/demo/index.html
@@ -91,6 +91,8 @@
       height: 100vh;
       margin: 0;
       padding: 0;
+      font-family: var(--arc-font-family);
+      -webkit-font-smoothing: var(--arc-font-font-smoothing);
     }
     </style>
 
@@ -206,6 +208,7 @@
               <paper-button on-click="generateData">Generate 100 saved items</paper-button>
               <paper-button on-click="clearData">Clear datastore</paper-button>
               <paper-button on-click="openWebUrlInput">Open web URL input</paper-button>
+              <paper-button on-click="openMeta">Open details</paper-button>
             </div>
 
             <div class="centered card">
@@ -576,6 +579,11 @@
 
       app._openWebUrlHandler = () => {
         document.getElementById('webUrlToast').opened = true;
+      };
+
+      app.openMeta = () => {
+        const workspace = document.querySelector('arc-request-workspace');
+        workspace.openWorkspaceDetails();
       };
       window.addEventListener('transport-request', app.send);
       window.addEventListener('workspace-state-read', app._restoreHandler);
