--- a/demo/index.html
+++ b/demo/index.html
@@ -50,6 +50,7 @@
     <script type="module" src="../../../@advanced-rest-client/saved-request-detail/saved-request-detail.js"></script>
     <script type="module" src="../../../@advanced-rest-client/bottom-sheet/bottom-sheet.js"></script>
     <script type="module" src="../../../@advanced-rest-client/http-code-snippets/http-code-snippets.js"></script>
+    <script type="module" src="../../../@advanced-rest-client/arc-data-export/arc-data-export.js"></script>
     <script type="module" src="../../../@polymer/paper-input/paper-input.js"></script>
     <script type="module" src="../../../@polymer/paper-icon-button/paper-icon-button.js"></script>
     <script type="module" src="../../../@advanced-rest-client/arc-icons/arc-icons.js"></script>
@@ -175,6 +176,7 @@
     <oauth1-authorization></oauth1-authorization>
     <arc-request-logic></arc-request-logic>
     <request-hooks-logic></request-hooks-logic>
+    <arc-data-export app-version="demo-page"></arc-data-export>
 
     <dom-bind id="demo">
       <template is="dom-bind">
@@ -239,6 +241,13 @@
             </div>
           </section>
         </div>
+
+        <bottom-sheet opened="{{exportSheetOpened}}">
+          <h3>Export demo</h3>
+          <p>This is a preview of the file. Normally export module would save this data to file / Drive.</p>
+          <p>File: [[exportFile]]</p>
+          <pre>[[exportData]]</pre>
+        </bottom-sheet>
       </template>
     </dom-bind>
     <paper-toast id="genToast" text="The request data has been generated"></paper-toast>
@@ -246,6 +255,7 @@
     <paper-toast id="webUrlToast" text="Open web URL requested via event"></paper-toast>
     <script type="module">
     import {DataGenerator} from '../../arc-data-generator/arc-data-generator.js';
+    import {afterNextRender} from '../../../@polymer/polymer/lib/utils/render-status.js';
     /* global chance */
     (function(app) {
       // const redirectUrl = location.href.replace(/request-editor\/demo\/(index\.html)?/,
@@ -590,14 +600,23 @@
         const workspace = document.querySelector('arc-request-workspace');
         workspace.openWorkspaceDetails();
       };
+
+      app._fileExportHandler = function(e) {
+        const {content, file} = e.detail;
+        afterNextRender(app, () => {
+          app.exportData = JSON.stringify(content, null, 2);
+          app.exportFile = file;
+          app.exportSheetOpened = true;
+        });
+        e.preventDefault();
+      };
       window.addEventListener('transport-request', app.send);
       window.addEventListener('workspace-state-read', app._restoreHandler);
       window.addEventListener('workspace-state-store', app._storeHandler);
-      window.addEventListener('request-save-state', app._saveRequestHandler);
-      window.addEventListener('request-details', app._requestDetailsHandler);
-      window.addEventListener('request-code-snippets', app._renderCodeSnippets);
       window.addEventListener('export-google-drive', app._exportDriveHandler);
       window.addEventListener('open-web-url', app._openWebUrlHandler);
+      window.addEventListener('file-data-save', app._fileExportHandler);
+      window.addEventListener('google-drive-data-save', app._fileExportHandler);
       window.addEventListener('WebComponentsReady', app.init);
     })(document.getElementById('demo'));
     </script>
